--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html{
     font-family: 'Poppins', sans-serif;
 }
 body{
-    background: #f8f9fa;
+    background: #ffffff;
     color: #0c0b0b;
 }
 .header{
