--- a/style.css
+++ b/style.css
@@ -10,10 +10,12 @@ html{
     box-sizing:border-box;
     font-family: 'Poppins', sans-serif;
 }
+
 body{
     background: #ffffff;
     color: #0c0b0b;
 }
+
 .header{
     position:fixed;
     top: 0;
@@ -60,6 +62,7 @@ div.top_progress_bar {
     animation: slideTop .5s ease forwards;
     animation-delay: calc(.2s * var(--i));
 }
+
 .navbar a:hover{
         padding: 0.5rem;
         background-color: #f9f7f7;
@@ -87,6 +90,7 @@ div.top_progress_bar {
 .home-content{
     max-width: 600px;
 }
+
 .home-content h3{
     font-size: 32px;
     font-weight: 700;
@@ -100,7 +104,7 @@ div.top_progress_bar {
     animation-delay: .7s;
 }
 .home-content h3 span{
-    color:#1F6E8C;
+    color:#FFB562;
 }
 .home-content h1{
     font-size: 56px;
@@ -131,7 +135,7 @@ div.top_progress_bar {
     width: 40px;
     height: 40px;
     background: transparent;
-    border: 2px solid #1F6E8C;
+    border: 2px solid #FFB562;
     border-radius: 50%;
     font-size: 20px;
     color: #0E2954;
@@ -178,7 +182,7 @@ div.top_progress_bar {
     text-align: center;
 }
 span{
-    color: #1F6E8C;
+    color: #FFB562;
 }
 .about-img{
      position: relative;
@@ -270,7 +274,6 @@ span{
     margin-bottom: 2.3rem;
   }
 
- 
   .skill-main h3 {
     margin-bottom: 2rem;
     text-align: center;
@@ -287,7 +290,7 @@ span{
  
   .skill-left .skill-bar .bar {
     width: 100%;
-    height: 10px;
+    height: 12px;
     background-color: #000;
     border-radius: 25px;
     margin-top: 10px;
@@ -304,46 +307,77 @@ span{
  
   .skill-right .skill-bar .bar {
     width: 100%;
-    height: 10px;
+    height: 12px;
     background-color: #000;
     border-radius: 25px;
     margin-top: 10px;
     position: relative;
   }
 
-  
   .skill-bar .bar span {
     width: 0;
     height: 100%;
     position: absolute;
     left: 0;
-    background-color: #3a9698;
+    background-color: #3AB0FF;
     border-radius: 25px;
     box-shadow: 0 0 5px #84A7A1;
   }
+  
+  .skill-bar .bar .java {
+    animation: java 3s forwards;
+  }
+  
+  .skill-bar .bar .cpp {
+    animation: cpp 3s forwards;
+  }
+  
+  .skill-bar .bar .python {
+      animation: python 3s forwards;
+  }
 
   .skill-bar .bar .html {
-    animation: html 7s forwards;
-  }
-
-  .skill-bar .bar .java {
-    animation: java 7s forwards;
-  }
-
-  .skill-bar .bar .javascript {
-    animation: javascript 7s forwards;
-  }
-
-  .skill-bar .bar .ai {
-    animation: ai 7s forwards;
-  }
-
-  .skill-bar .bar .python {
-    animation: python 7s forwards;
+    animation: html 3s forwards;
   }
 
   .skill-bar .bar .css {
-    animation: css 7s forwards;
+    animation: css 3s forwards;
+  }
+
+  .skill-bar .bar .javascript {
+    animation: javascript 3s forwards;
+  }
+
+  .skill-bar .bar .boot {
+    animation: boot 3s forwards;
+  }
+
+  .skill-bar .bar .dl {
+    animation: dl 3s forwards;
+  }
+  
+  .skill-bar .bar .node {
+      animation: node 3s forwards;
+  }
+
+  .skill-bar .bar .react {
+    animation: react 3s forwards;
+  }
+
+  .skill-bar .bar .mongo {
+    animation: mongo 3s forwards;
+  }
+
+  .skill-bar .bar .exp {
+    animation: exp 3s forwards;
+  }
+
+  .skill-bar .bar .git {
+    animation: git 3s forwards;
+  }
+  
+  .skill-bar .bar .fire {
+    animation: fire 3s forwards;
   }
 
 
@@ -378,9 +412,7 @@ span{
     background: #0E2954;
     border-radius: 50%;
 }
-.second{
-  margin-top: 5.25rem;
-}
+
 .achievements-content .content{
     position: relative;
     padding: 1.5rem;
@@ -506,6 +538,7 @@ section h2 {
     font-weight: 500;
     position: relative;
     top: .2em;
+    color: #F87474;
 }
   
 .card__name{
@@ -525,8 +558,8 @@ section h2 {
     text-transform: uppercase;
     font-weight: 600;
     border: none;
-    padding: .5em;
-    border-radius: 25px;
+    padding: .7em;
+    border-radius: 20px;
     margin-top: .5em;
     cursor: pointer;
 }
@@ -679,25 +712,8 @@ section h2 {
     }
 }
 
-@keyframes html {
-    0% {
-      width: 0;
-    }
-    100% {
-      width: 80%;
-    }
-  }
 
-  @keyframes css {
-    0% {
-      width: 0;
-    }
-    100% {
-      width: 70%;
-    }
-  }
-
-  @keyframes java {
+@keyframes java {
     0% {
       width: 0;
     }
@@ -706,16 +722,7 @@ section h2 {
     }
   }
 
-  @keyframes javascript {
-    0% {
-      width: 0;
-    }
-    100% {
-      width: 90%;
-    }
-  }
-
-  @keyframes ai {
+  @keyframes cpp {
     0% {
       width: 0;
     }
@@ -729,7 +736,106 @@ section h2 {
       width: 0;
     }
     100% {
+      width: 60%;
+    }
+  }
+
+  @keyframes html {
+    0% {
+      width: 0;
+    }
+    100% {
+      width: 95%;
+    }
+  }
+
+  @keyframes css {
+    0% {
+      width: 0;
+    }
+    100% {
+      width: 90%;
+    }
+  }
+
+  @keyframes javascript {
+    0% {
+      width: 0;
+    }
+    100% {
       width: 80%;
+    }
+  }
+
+@keyframes boot {
+    0% {
+      width: 0;
+    }
+    100% {
+      width: 80%;
+    }
+  }
+
+  @keyframes dl {
+    0% {
+      width: 0;
+    }
+    100% {
+      width: 70%;
+    }
+  }
+
+  @keyframes node {
+    0% {
+      width: 0;
+    }
+    100% {
+      width: 80%;
+    }
+  }
+
+  @keyframes react {
+    0% {
+      width: 0;
+    }
+    100% {
+      width: 90%;
+    }
+  }
+
+  @keyframes mongo {
+    0% {
+      width: 0;
+    }
+    100% {
+      width: 90%;
+    }
+  }
+
+  @keyframes exp {
+    0% {
+      width: 0;
+    }
+    100% {
+      width: 75%;
+    }
+  }
+  
+  @keyframes git {
+    0% {
+      width: 0;
+    }
+    100% {
+      width: 90%;
+    }
+  }
+
+  @keyframes fire {
+    0% {
+      width: 0;
+    }
+    100% {
+      width: 60%;
     }
   }
 
