--- a/style.css
+++ b/style.css
@@ -256,7 +256,7 @@ span{
   }
 
   .skills {
-    background: #fff;
+    background: #ebe8ed;
     padding: 50px;
   }
 
@@ -432,6 +432,79 @@ span{
 .achievements-content .content p{
     padding-top: .5rem;
 }
+
+.portfolio {
+  background: #ebe8ed;
+}
+
+.portfolio h2 {
+  margin-bottom: 4rem;
+}
+
+.portfolio-container {
+  margin-left: 5rem;
+  margin-right: 5rem;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  align-items: center;
+  gap: 2rem;
+  padding-bottom: 5rem;
+  
+}
+
+.portfolio-container .portfolio-box {
+  height: 20rem;
+  position: relative;
+  border-radius: 1rem;
+  box-shadow: 0 0 1rem #1f5e68;
+  overflow: hidden;
+  display: flex;
+}
+
+.portfolio-box img {
+  width: 100%;
+  transition: transform 0.5s ease; 
+}
+
+.portfolio-box:hover img {
+  transform: scale(1.1);
+}
+
+.portfolio-box .portfolio-layer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.1), #3AB0FF);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 0 4rem;
+  transform: translateY(100%);
+  transition: transform 0.3s ease; 
+}
+
+.portfolio-box:hover .portfolio-layer {
+  transform: translateY(0);
+}
+
+
+.portfolio-layer a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 5rem;
+  height: 5rem;
+}
+
+.portfolio-layer a i {
+  font-size: 2rem;
+  color: #1f5e68;
+}
+
 
 .container {
     max-width: 1100px;
