--- a/style.css
+++ b/style.css
@@ -541,7 +541,8 @@ section h2 {
 
 .product img {
     display: block;
-    max-width: 100%;
+    height: 10rem;
+    width: 25rem;
 }
 
 .product h3 {
