--- a/style.css
+++ b/style.css
@@ -795,7 +795,7 @@ section h2 {
     }
   }
 
-  @keyframes cpp {
+  @keyframes sql {
     0% {
       width: 0;
     }
@@ -818,7 +818,7 @@ section h2 {
       width: 0;
     }
     100% {
-      width: 95%;
+      width: 100%;
     }
   }
 
@@ -827,7 +827,7 @@ section h2 {
       width: 0;
     }
     100% {
-      width: 90%;
+      width: 100%;
     }
   }
 
